Fixed keypad heights on mobile view

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -45,7 +45,7 @@ li {
 
 @media all and (max-width: 500px) {
 	.container {
-		width: 100%;
+		width: 100vw;
 		height: 100vh;
 		top: 0;
 	}
