--- a/src/styles/Screen.css
+++ b/src/styles/Screen.css
@@ -18,7 +18,6 @@
 }
 .displayAll {
 	display: flex;
-	padding-bottom: 60px;
 	overflow-y: hidden;
 	overflow-x: scroll;
 	white-space: nowrap;
